Chapter 15 Class Notes/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes
-d
C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\SpellCheck.java
<---- end of javadoc command ---->
Loading source file C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\SpellCheck.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_131
Building tree for all the packages and classes...
Generating C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\doc\SpellCheck.html...
C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\MapDemo.java:21: error: illegal start of expression
      for ()
           ^
C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\MapDemo.java:22: error: illegal start of expression
      {
      ^
C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\MapDemo.java:22: error: ';' expected
      {
       ^
C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\MapDemo.java:25: error: illegal start of expression
   }
   ^
C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\MapDemo.java:25: error: ')' expected
   }
    ^
C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\MapDemo.java:27: error: illegal start of statement
C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\MapDemo.java:26: error: reached end of file while parsing
}
 ^
Generating C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\doc\package-frame.html...
Generating C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\doc\package-summary.html...
Generating C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\doc\allclasses-frame.html...
Generating C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\doc\allclasses-noframe.html...
Generating C:\Users\ssathyanathan\GitHub\data-structures-shilpa1216\Chapter 15 Class Notes\doc\index.html...
7 errors
